# open_virtual_camera

./: .gitignore  CMakeLists.txt  README.md  camera_name.txt  install.bat  uninstall.bat  vcpkg.json
.github/workflows/: cmake.yml
include/: argparse.hpp  findcam.hpp  shared-memory-queue.h  virtual_output.h
src/: main.cpp  old.cpp  shared-memory-queue.c
win-dshow/: virtualcam-install.bat  virtualcam-uninstall.bat
